LAB-day2/lab3-rbac/lab_manifests/privileged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-pod
  namespace: dev
spec:
  containers:
  - name: busybox
    image: busybox
    securityContext:
      privileged: true
    command: ["sleep", "3600"]
